Lista de tokens en objetos

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=compilador
-sonar.projectName=Analisi Lexico
+sonar.projectName=Analisis Lexico
 sonar.exclusions=FamiliaVocabulario/**
 sonar.sources=. 
 sonar.sourceEncoding=UTF-8
+sonar.python.version=3.11.5
+scm.provider=git
